--- a/home.html
+++ b/home.html
@@ -14,11 +14,11 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=DM+Sans|Yeseva+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans|Righteous&display=swap" rel="stylesheet">
 
 </head>
 
-<body>
+<body id="home">
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
@@ -31,17 +31,15 @@
     <div class="col-md-1">
     </div>
     <div class="col-md-3">
-      <h1>
-        Iker Aguirre
-      </h1>
+      <li id="homelink"><a href="home.html" style="color: #fff">Iker Aguirre</a></li>
     </div>
     <div class="col-md-4">
     </div>
     <div class="col-md-3">
       <ul id="navigation" class="copy-font">
-        <li>Work</li>
-        <li>About</li>
-        <li>Contact</li>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </div>
     <div class="col-md-1">
@@ -52,15 +50,15 @@
     </div>
   </div>
   <div class="row" id="content">
-    <div class="col-md-3">
+    <div class="col-md-1">
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
       <p id="desc" class="copy-font">
         Art and Illustration that merges classic and modern aesthetics in a seamless way, creating a
         unique and timeless style.
       </p>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-7">
     </div>
   </div>
   <div class="row">
@@ -71,12 +69,14 @@
     <div class="col-md-1">
     </div>
     <div class="col-md-10">
+      <p id="copyright" class="copy-font"> 
+          © Copyright 2019
+      </p>
     </div>
     <div class="col-md-1">
     </div>
   </div>
 </div>
-<img src="" #id="featured">
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
