--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
     <div class="col-md-3">
       <ul id="navigation" class="copy-font">
         <li><a href="work.html">Work</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="col-md-1">
