--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Iker Aguirre | Work</title>
+  <title>Iker Aguirre | Contact</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,7 +18,7 @@
 
 </head>
 
-<body id="work">
+<body id="contact">
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
@@ -49,68 +49,17 @@
     <div class="col-md-12">
     </div>
   </div>
-  <div class="row" id="workcontent">
+  <div class="row" id="content">
     <div class="col-md-1">
     </div>
-    <div class="col-md-10">
-      
-      <div class="row">
-        <div class="col-md-4">
-          <img src="img/alberca.png" class="photo" />
-        </div>
-
-        <div class="col-md-4">
-          <img src="img/ventanas.png" class="photo" />
-        </div>
-
-        <div class="col-md-4">
-          <img src="img/tyler001.png" class="photo" />
-        </div>
+    <div class="col-md-4">
+      <ul id="conlinks" class="copy-font">
+        <li><a href="mailto:ikeraguirre2607@gmail.com">Mail</a></li>
+        <li><a href="http://www.instagram.com/txikuri" target="_blank">Instagram</a></li>
+        <li><a href="https://twitter.com/eltxikuri" target="_blank">Twitter</a></li>
+      </ul>
     </div>
-
-    <div class="row">
-      <div class="col-md-4">
-          <img src="img/eggleston.png" class="photo" />
-        </div>
-
-        <div class="col-md-4">
-          <img src="img/gucciboi.jpg" class="photo" />
-        </div>
-
-        <div class="col-md-4">
-          <img src="img/maer002.png" class="photo" />
-        </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4">
-          <img src="img/reader001.jpg" class="photo" />
-        </div>
-
-        <div class="col-md-4">
-          <img src="img/greek003.jpg" class="photo" />
-        </div>
-
-        <div class="col-md-4">
-          <img src="img/semaforo001.png" class="photo" />
-        </div>
-    </div>
-
-     <div class="row">
-      <div class="col-md-4">
-          <img src="img/commute.jpg" class="photo" />
-        </div>
-
-        <div class="col-md-4">
-          <img src="img/latroca.jpg" class="photo" />
-        </div>
-
-        <div class="col-md-4">
-          <img src="img/plantasia.jpg" class="photo" />
-        </div>
-    </div>
-
-    <div class="col-md-1">
+    <div class="col-md-7">
     </div>
   </div>
   <div class="row">
