--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
       <ul id="navigation" class="copy-font">
         <li><a href="work.html">Work</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="col-md-1">
@@ -53,10 +53,10 @@
     <div class="col-md-1">
     </div>
     <div class="col-md-4">
-      <p id="desc" class="copy-font">
+      <nav id="desc" class="copy-font">
         Art and Illustration that merges classic and modern aesthetics in a seamless way, creating a
         unique and timeless style.
-      </p>
+      </nav>
     </div>
     <div class="col-md-7">
     </div>
