moved home to index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Iker Aguirre | Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,23 +12,71 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans|Righteous&display=swap" rel="stylesheet">
 
-  <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
+<body id="home">
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.7.1.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+
+
+  <div class="container-fluid">
+  <div class="row" id="header">
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-3">
+      <li id="homelink"><a href="home.html" style="color: #fff">Iker Aguirre</a></li>
+    </div>
+    <div class="col-md-4">
+    </div>
+    <div class="col-md-3">
+      <ul id="navigation" class="copy-font">
+        <li><a href="work.html">Work</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <div class="col-md-1">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+    </div>
+  </div>
+  <div class="row" id="content">
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-4">
+      <nav id="desc" class="copy-font">
+        Art and Illustration that merges classic and modern aesthetics in a seamless way, creating a
+        unique and timeless style.
+      </nav>
+    </div>
+    <div class="col-md-7">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+    </div>
+  </div>
+  <div class="row" id="footer">
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-10">
+      <p id="copyright" class="copy-font"> 
+          © Copyright 2019
+      </p>
+    </div>
+    <div class="col-md-1">
+    </div>
+  </div>
+</div>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
