--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="col-md-1">
     </div>
     <div class="col-md-3">
-      <li id="homelink"><a href="home.html" style="color: #fff">Iker Aguirre</a></li>
+      <li id="homelink"><a href="index.html" style="color: #fff">Iker Aguirre</a></li>
     </div>
     <div class="col-md-4">
     </div>
