--- a/work.html
+++ b/work.html
@@ -56,21 +56,21 @@
       
       <div class="row">
         <div class="col-md-4">
-          <img src="img/alberca.png" class="photo" />
+          <img src="img/alberca.jpg" class="photo" />
         </div>
 
         <div class="col-md-4">
-          <img src="img/ventanas.png" class="photo" />
+          <img src="img/ventanas.jpg" class="photo" />
         </div>
 
         <div class="col-md-4">
-          <img src="img/tyler001.png" class="photo" />
+          <img src="img/tyler001.jpg" class="photo" />
         </div>
     </div>
 
     <div class="row">
       <div class="col-md-4">
-          <img src="img/eggleston.png" class="photo" />
+          <img src="img/eggleston.jpg" class="photo" />
         </div>
 
         <div class="col-md-4">
@@ -78,7 +78,7 @@
         </div>
 
         <div class="col-md-4">
-          <img src="img/maer002.png" class="photo" />
+          <img src="img/maer002.jpg" class="photo" />
         </div>
     </div>
 
@@ -92,7 +92,7 @@
         </div>
 
         <div class="col-md-4">
-          <img src="img/semaforo001.png" class="photo" />
+          <img src="img/semaforo001.jpg" class="photo" />
         </div>
     </div>
 
